[package]
name = "from_anarchy_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
commands = []
godot = ["gdnative", "commands"]

[dependencies]
gdnative = { version = "0.9", optional = true}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
euclid = "0.22"

[lib]
crate-type = ["cdylib", "rlib"]