[package]
name = "from_anarchy_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.14.0", features = ["async-std-runtime"] }
async-std = "1.9.0"
futures = "0.3.15"
from_anarchy_lib = { path = "../from_anarchy_lib", features = ["commands"] }